--- a/deepscaler/verl/verl/trainer/config/ppo_trainer_curiosity_structured.yaml
+++ b/deepscaler/verl/verl/trainer/config/ppo_trainer_curiosity_structured.yaml
@@ -177,4 +177,4 @@ trainer:
   critic_warmup: 0
   default_hdfs_dir: null #~/experiments/gsm8k/ppo/${trainer.experiment_name}
   default_local_dir: checkpoints/${trainer.project_name}/${trainer.experiment_name}
-  val_only: True
+  val_only: False
